# cli_parser

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/cli_arg.egg-info/: PKG-INFO  SOURCES.txt
src/cli_parser/: __init__.py  cli_arg.py  types.py
