[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli_arg"
version = "0.1.0"
description = "Command-line tool customizable with decorators"
authors = [
    { name = "Dominique Beauchamp", email = "lgd.beauchamp@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
    # Ajoute ici les dépendances de ton projet, exemple :
    # "click>=8.0" 
]

[project.urls]
Homepage = "https://github.com/yourname/my_cli"
Repository = "https://github.com/yourname/my_cli"
Issues = "https://github.com/yourname/my_cli/issues"
