[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli_parser"
version = "0.1.0"
description = "Command-line argument parser customizable with decorators"
authors = [
    { name = "Dominique Beauchamp", email = "lgd.beauchamp@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
license-files = ["LICENSE*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/dominiquebeauchamp/cli_parser"
Repository = "https://github.com/dominiquebeauchamp/cli_parser"
Issues = "https://github.com/dominiquebeauchamp/cli_parser/issues"
