[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli_parser"
version = "0.1.0"
dependencies = []
requires-python = ">=3.12"
authors = [{ name = "Dominique Beauchamp", email = "lgd.beauchamp@gmail.com" }]
description = "Command-line argument parser customizable with decorators"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Application Frameworks"
]

[project.urls]
Homepage = "https://github.com/dominiquebeauchamp/cli_parser"
Repository = "https://github.com/dominiquebeauchamp/cli_parser"
Issues = "https://github.com/dominiquebeauchamp/cli_parser/issues"
